src/mcp/snapshots/pmp__mcp__server__tests__list_resource_templates_include_project_and_tasks.snap
---
source: src/mcp/server.rs
expression: "result.resource_templates.iter().map(|t|\n(&t.uri_template, &t.name)).collect::<Vec<_>>()"
---
[
  [
    "pmp://projects/{id}",
    "project"
  ],
  [
    "pmp://projects/{id}/tasks",
    "project_tasks"
  ]
]
