src/mcp/snapshots/pmp__mcp__server__tests__read_project_by_id_returns_project.snap
---
source: src/mcp/server.rs
expression: result
---
{
  "contents": [
    {
      "uri": "pmp://projects/1",
      "mimeType": "application/json",
      "text": "{\n  \"id\": 1,\n  \"name\": \"Alpha\",\n  \"description\": \"First project\",\n  \"created_at\": \"now\"\n}"
    }
  ]
}
