src/mcp/snapshots/pmp__mcp__server__tests__read_project_tasks_returns_ordered_tasks.snap
---
source: src/mcp/server.rs
expression: result
---
{
  "contents": [
    {
      "uri": "pmp://projects/1/tasks",
      "mimeType": "application/json",
      "text": "[\n  {\n    \"id\": 3,\n    \"project_id\": 1,\n    \"name\": \"High task\",\n    \"description\": \"\",\n    \"status\": \"in_progress\",\n    \"priority\": 3,\n    \"created_at\": \"now\"\n  },\n  {\n    \"id\": 2,\n    \"project_id\": 1,\n    \"name\": \"Low task\",\n    \"description\": \"\",\n    \"status\": \"todo\",\n    \"priority\": 1,\n    \"created_at\": \"now\"\n  }\n]"
    }
  ]
}
