src/mcp/snapshots/pmp__mcp__server__tests__read_unknown_project_returns_resource_not_found.snap
---
source: src/mcp/server.rs
expression: err
---
{
  "code": -32602,
  "message": "resource not found"
}
